entrance/cmd/entrance/k8s/02-entrance.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: entrance
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: entrance
  template:
    metadata:
      labels:
        app: entrance
    spec:
      containers:
        - name: entrance
          # image: web3eye/entrance:latest
          image: coastlinesss/entrance:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: service-config
              mountPath: /etc/Entrance
      volumes:
        - name: service-config
          configMap:
            name: entrance-config
---
apiVersion: v1
kind: Service
metadata:
  name: entrance
spec:
  ports:
    - name: http
      port: 30150
      targetPort: 30150
    - name: grpc
      port: 30151
      targetPort: 30151
    - name: healthz
      port: 30152
      targetPort: 30152
  selector:
    app: entrance
