entrance/cmd/entrance/k8s/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: kube-system
  name: entrance-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares:
      default-strip-entrance-prefix@kubernetescrd,
      default-http-redirect-https@kubernetescrd,
      default-http-redirect-https-testing@kubernetescrd,
      default-common-headers@kubernetescrd

spec:
  tls:
    - hosts:
        - "*.testnet.web3eye.io"
        - testnet.web3eye.io
      secretName: testnet-web3eye-io-tls
  rules:
    - host: testnet.web3eye.io
      http:
        paths:
          - path: /api/entrance
            pathType: Prefix
            backend:
              service:
                name: entrance
                port:
                  number: 30150
