entrance/cmd/entrance/k8s/04-ingress-vpn.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: kube-system
  name: entrance-ingress-vpn
  annotations:
    kubernetes.io/ingress.class: "traefik-internet-vpn"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-strip-entrance-prefix@kubernetescrd,
      kube-system-http-redirect-https@kubernetescrd,
      kube-system-http-redirect-https-testing@kubernetescrd,
      kube-system-common-headers@kubernetescrd

spec:
  tls:
    - hosts:
        - "*.api.web3eye.webui.io"
        - api.web3eye.webui.io
      secretName: web3eye-webui-io-tls
  rules:
    - host: api.web3eye.webui.io
      http:
        paths:
          - path: /api/entrance
            pathType: Prefix
            backend:
              service:
                name: entrance
                port:
                  number: 30150
    - host: www.api.web3eye.webui.io
      http:
        paths:
          - path: /api/entrance
            pathType: Prefix
            backend:
              service:
                name: entrance
                port:
                  number: 30150
